RESOLVED FIXED233102
CSP: Fix missing lineNumber and columnNumber in inline violation reports
https://bugs.webkit.org/show_bug.cgi?id=233102
Summary CSP: Fix missing lineNumber and columnNumber in inline violation reports
Patrick Griffis
Reported 2021-11-14 11:26:27 PST
CSP: Fix missing lineNumber and columnNumber in inline violation reports
Attachments
Patch (1.48 KB, patch)
2021-11-14 11:27 PST, Patrick Griffis
no flags
Patch (2.98 KB, patch)
2021-11-14 12:33 PST, Patrick Griffis
no flags
Patrick Griffis
Comment 1 2021-11-14 11:27:40 PST
Patrick Griffis
Comment 2 2021-11-14 12:33:29 PST
EWS
Comment 3 2021-11-15 00:42:45 PST
Committed r285800 (244244@main): <https://commits.webkit.org/244244@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444187 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-15 00:43:21 PST
Note You need to log in before you can comment on or make changes to this bug.