CSP: Fix missing lineNumber and columnNumber in inline violation reports https://bugs.webkit.org/show_bug.cgi?id=233102

Reviewed by Carlos Garcia Campos.

LayoutTests/imported/w3c:

Update expectations as passing.

* web-platform-tests/content-security-policy/securitypolicyviolation/blockeduri-inline-expected.txt:

Source/WebCore:

* page/csp/ContentSecurityPolicy.cpp:
(WebCore::ContentSecurityPolicy::reportViolation const):



Canonical link: https://commits.webkit.org/244244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285800 268f45cc-cd09-0410-ab3c-d52691b4dbfc